splash animation (need to fix placement/stretch)

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -69,9 +69,6 @@ header {
             background-color: $secondary;
           }
           @include md {
-            &.home {
-              // display: none;
-            }
             &:last-child {
               margin-right: 30px;
             }
